# conan-flac

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
.travis/: install.sh
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
